assignment done (for now)

--- a/fun_with_pandas.ipynb
+++ b/fun_with_pandas.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "a20efc57",
    "metadata": {},
    "outputs": [
@@ -44,7 +44,7 @@
       "Collecting lxml\n",
       "  Downloading lxml-5.3.0-cp310-cp310-manylinux_2_28_x86_64.whl.metadata (3.8 kB)\n",
       "Downloading lxml-5.3.0-cp310-cp310-manylinux_2_28_x86_64.whl (5.0 MB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m5.0/5.0 MB\u001b[0m \u001b[31m24.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m5.0/5.0 MB\u001b[0m \u001b[31m16.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m\n",
       "\u001b[?25hInstalling collected packages: lxml\n",
       "Successfully installed lxml-5.3.0\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
@@ -3061,7 +3061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "id": "1ec41964",
    "metadata": {
     "editable": true,
@@ -3078,7 +3078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 33,
    "id": "e6783154-4700-41a3-aba5-4db1069f7442",
    "metadata": {},
    "outputs": [
@@ -3247,7 +3247,7 @@
        "[636 rows x 5 columns]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3261,7 +3261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 7,
    "id": "1529c465-c970-432d-9be1-6861d042b141",
    "metadata": {},
    "outputs": [
@@ -3442,7 +3442,7 @@
        "[636 rows x 6 columns]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3457,7 +3457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 8,
    "id": "ff46dee8-c5df-4d1c-9d0d-bd11520ab08f",
    "metadata": {},
    "outputs": [
@@ -3663,7 +3663,7 @@
        "[636 rows x 7 columns]"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3678,7 +3678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 12,
    "id": "5f779f15-eacf-4459-8b9b-0460a004dbf0",
    "metadata": {},
    "outputs": [
@@ -3711,6 +3711,7 @@
        "      <th>Debut year only</th>\n",
        "      <th>Third digit of year</th>\n",
        "      <th>Decade</th>\n",
+       "      <th>AAADecade</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -3724,6 +3725,7 @@
        "      <td>1939</td>\n",
        "      <td>3</td>\n",
        "      <td>30</td>\n",
+       "      <td>30</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -3734,6 +3736,7 @@
        "      <td>Detective Comics (vol. 1) #29</td>\n",
        "      <td>1939</td>\n",
        "      <td>3</td>\n",
+       "      <td>30</td>\n",
        "      <td>30</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -3746,6 +3749,7 @@
        "      <td>1939</td>\n",
        "      <td>3</td>\n",
        "      <td>30</td>\n",
+       "      <td>30</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -3756,6 +3760,7 @@
        "      <td>Silver Streak Comics #1</td>\n",
        "      <td>1939</td>\n",
        "      <td>3</td>\n",
+       "      <td>30</td>\n",
        "      <td>30</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -3768,9 +3773,11 @@
        "      <td>1940</td>\n",
        "      <td>4</td>\n",
        "      <td>40</td>\n",
+       "      <td>40</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -3790,6 +3797,7 @@
        "      <td>2016</td>\n",
        "      <td>1</td>\n",
        "      <td>10</td>\n",
+       "      <td>10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -3800,6 +3808,7 @@
        "      <td>The Flash: Rebirth #1</td>\n",
        "      <td>2016</td>\n",
        "      <td>1</td>\n",
+       "      <td>10</td>\n",
        "      <td>10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -3812,6 +3821,7 @@
        "      <td>2017</td>\n",
        "      <td>1</td>\n",
        "      <td>10</td>\n",
+       "      <td>10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
@@ -3822,6 +3832,7 @@
        "      <td>The Gumazing Gum Girl! Book 4: Cover Blown!</td>\n",
        "      <td>2019</td>\n",
        "      <td>1</td>\n",
+       "      <td>10</td>\n",
        "      <td>10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -3834,10 +3845,11 @@
        "      <td>2019</td>\n",
        "      <td>1</td>\n",
        "      <td>10</td>\n",
+       "      <td>10</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>636 rows × 8 columns</p>\n",
+       "<p>636 rows × 9 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -3880,23 +3892,23 @@
        "7   The Gumazing Gum Girl! Book 4: Cover Blown!            2019   \n",
        "8   The Gumazing Gum Girl! Book 4: Cover Blown!            2019   \n",
        "\n",
-       "   Third digit of year Decade  \n",
-       "0                    3     30  \n",
-       "1                    3     30  \n",
-       "2                    3     30  \n",
-       "3                    3     30  \n",
-       "0                    4     40  \n",
-       "..                 ...    ...  \n",
-       "4                    1     10  \n",
-       "5                    1     10  \n",
-       "6                    1     10  \n",
-       "7                    1     10  \n",
-       "8                    1     10  \n",
+       "   Third digit of year Decade AAADecade  \n",
+       "0                    3     30        30  \n",
+       "1                    3     30        30  \n",
+       "2                    3     30        30  \n",
+       "3                    3     30        30  \n",
+       "0                    4     40        40  \n",
+       "..                 ...    ...       ...  \n",
+       "4                    1     10        10  \n",
+       "5                    1     10        10  \n",
+       "6                    1     10        10  \n",
+       "7                    1     10        10  \n",
+       "8                    1     10        10  \n",
        "\n",
-       "[636 rows x 8 columns]"
+       "[636 rows x 9 columns]"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3904,12 +3916,16 @@
    "source": [
     "#making a column with the decade just to be clear that e.g. 3 is not a decade :)))\n",
     "df_villians_combined['Decade'] = df_villians_combined['Third digit of year'] + '0'\n",
-    "df_villians_combined\n"
+    "df_villians_combined\n",
+    "\n",
+    "#this could probably be done with just one line:\n",
+    "df_villians_combined['Decade'] = df_villians_combined['Debut year only'].str[2] + '0'\n",
+    "df_villians_combined"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 13,
    "id": "84ca1b0c-d82f-4297-a099-e5693665cd30",
    "metadata": {},
    "outputs": [
@@ -3929,7 +3945,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3940,34 +3956,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 14,
    "id": "f9f73da1-9537-4d1a-8ecf-09f4d2ec75c9",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Company\n",
-       "DC                          338\n",
-       "Marvel                      264\n",
-       "Fawcett Comics/DC             6\n",
-       "Image                         5\n",
-       "Dark Horse                    5\n",
-       "Marvel/Timely                 4\n",
-       "Disney/Hyperion               4\n",
-       "Eternity                      3\n",
-       "Lev Gleason Publications      1\n",
-       "Comico                        1\n",
-       "Mirage                        1\n",
-       "Image Comics                  1\n",
-       "Name: count, dtype: int64"
-      ]
-     },
-     "execution_count": 55,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 3. Write a script that ranks the different comics companies in terms of how many supervillains they have, and display the results in a nice table (pandas dataframe)\n",
     " #do the same but for companies\n",
@@ -3977,7 +3969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 17,
    "id": "35372f7d-e809-4a86-b4fc-cbca7ef1ce3c",
    "metadata": {},
    "outputs": [
@@ -4000,7 +3992,7 @@
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
-       "    <tr style=\"text-align: center;\">\n",
+       "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Company</th>\n",
        "      <th>Number of super villians</th>\n",
@@ -4072,22 +4064,22 @@
        "</div>"
       ],
       "text/plain": [
-       "            Company           Number of super villians\n",
-       "0                         DC             338          \n",
-       "1                     Marvel             264          \n",
-       "2          Fawcett Comics/DC               6          \n",
-       "3                      Image               5          \n",
-       "4                 Dark Horse               5          \n",
-       "5              Marvel/Timely               4          \n",
-       "6            Disney/Hyperion               4          \n",
-       "7                   Eternity               3          \n",
-       "8   Lev Gleason Publications               1          \n",
-       "9                     Comico               1          \n",
-       "10                    Mirage               1          \n",
-       "11              Image Comics               1          "
+       "                     Company  Number of super villians\n",
+       "0                         DC                       338\n",
+       "1                     Marvel                       264\n",
+       "2          Fawcett Comics/DC                         6\n",
+       "3                      Image                         5\n",
+       "4                 Dark Horse                         5\n",
+       "5              Marvel/Timely                         4\n",
+       "6            Disney/Hyperion                         4\n",
+       "7                   Eternity                         3\n",
+       "8   Lev Gleason Publications                         1\n",
+       "9                     Comico                         1\n",
+       "10                    Mirage                         1\n",
+       "11              Image Comics                         1"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4117,7 +4109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 34,
    "id": "6781809e",
    "metadata": {
     "scrolled": true
@@ -4205,7 +4197,7 @@
        "4           4.22        9.98          6.83         6.24  2015"
       ]
      },
-     "execution_count": 153,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4219,7 +4211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 35,
    "id": "9e2e3507",
    "metadata": {},
    "outputs": [
@@ -4387,7 +4379,7 @@
        "[182 rows x 6 columns]"
       ]
      },
-     "execution_count": 154,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4411,6 +4403,156 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "dbf9b0a4-ea33-4ff7-a5ff-a4b270085423",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Participant_id</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Task</th>\n",
+       "      <th>RT</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>Reading_NoInt</td>\n",
+       "      <td>4.16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>Reading_NoInt</td>\n",
+       "      <td>4.35</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>Reading_NoInt</td>\n",
+       "      <td>3.60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>Reading_NoInt</td>\n",
+       "      <td>3.90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>Reading_NoInt</td>\n",
+       "      <td>4.22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>723</th>\n",
+       "      <td>177</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>Reading_Int</td>\n",
+       "      <td>4.28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>724</th>\n",
+       "      <td>178</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>Reading_Int</td>\n",
+       "      <td>5.49</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>725</th>\n",
+       "      <td>179</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>Reading_Int</td>\n",
+       "      <td>5.16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>726</th>\n",
+       "      <td>180</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>Reading_Int</td>\n",
+       "      <td>5.51</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>727</th>\n",
+       "      <td>181</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>Reading_Int</td>\n",
+       "      <td>4.59</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>728 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Participant_id  Year           Task    RT\n",
+       "0                 0  2015  Reading_NoInt  4.16\n",
+       "1                 1  2015  Reading_NoInt  4.35\n",
+       "2                 2  2015  Reading_NoInt  3.60\n",
+       "3                 3  2015  Reading_NoInt  3.90\n",
+       "4                 4  2015  Reading_NoInt  4.22\n",
+       "..              ...   ...            ...   ...\n",
+       "723             177  2021    Reading_Int  4.28\n",
+       "724             178  2021    Reading_Int  5.49\n",
+       "725             179  2021    Reading_Int  5.16\n",
+       "726             180  2021    Reading_Int  5.51\n",
+       "727             181  2021    Reading_Int  4.59\n",
+       "\n",
+       "[728 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_melt = pd.melt(df, id_vars=['Participant_id', 'Year'], value_vars=['Reading_NoInt', 'Naming_Int', 'Naming_NoInt', 'Reading_Int'], var_name='Task', value_name='RT', col_level=None, ignore_index=True)\n",
+    "df_melt\n",
+    "#df_melt.head()"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "338ce33a-af2c-4a74-af51-27e5806614c1",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "51655ceb",
    "metadata": {},
@@ -4422,11 +4564,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "id": "77fcb93b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Year  Task         \n",
+       "2015  Naming_Int        8.617143\n",
+       "      Naming_NoInt      5.123571\n",
+       "      Reading_Int       4.446429\n",
+       "      Reading_NoInt     3.951429\n",
+       "2016  Naming_Int        8.859268\n",
+       "      Naming_NoInt      5.405610\n",
+       "      Reading_Int       5.340000\n",
+       "      Reading_NoInt     4.076098\n",
+       "2017  Naming_Int        9.311765\n",
+       "      Naming_NoInt      5.771176\n",
+       "      Reading_Int       5.492353\n",
+       "      Reading_NoInt     4.414412\n",
+       "2018  Naming_Int        9.372667\n",
+       "      Naming_NoInt      5.298000\n",
+       "      Reading_Int       4.938667\n",
+       "      Reading_NoInt     3.886000\n",
+       "2019  Naming_Int        9.536087\n",
+       "      Naming_NoInt      6.345652\n",
+       "      Reading_Int       6.090870\n",
+       "      Reading_NoInt     4.935652\n",
+       "2020  Naming_Int        9.740833\n",
+       "      Naming_NoInt      5.962500\n",
+       "      Reading_Int       4.956667\n",
+       "      Reading_NoInt     4.395000\n",
+       "2021  Naming_Int       10.105484\n",
+       "      Naming_NoInt      6.387742\n",
+       "      Reading_Int       7.038065\n",
+       "      Reading_NoInt     4.842581\n",
+       "Name: RT, dtype: float64"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#.mean()\n",
+    "\n",
+    "#year - mean RT\n",
+    "#2015\n",
+    "#2016\n",
+    "\n",
+    "#pd.df_melt.mean(axis='Year', skipna=True, numeric_only=False)\n",
+    "\n",
+    "#df_melt.mean('Year')\n",
+    "\n",
+    "\n",
+    "mean_year_task = df_melt.groupby(['Year', 'Task'])['RT'].mean()\n",
+    "mean_year_task"
+   ]
   }
  ],
  "metadata": {
